@@ -6,6 +6,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Tom Collins
 	- vdelivermail: read full message, even on catchall delete/bounce
 	  to avoid SIGPIPE error if maildrop is calling vdelivermail.
+	- vdelivermail: missing declaration when QMAIL_EXT defined.
 
 5.4.11 - released 20-Mar-05
 
